# splits-rs

./: Cargo.toml
crates/splits/: Cargo.toml
crates/splits/src/: config.rs  lib.rs  query.rs  split_main.rs  split_provider_ext.rs
crates/splits/src/types/: account.rs
crates/splits/tests/: get_split_accounts.rs  split_main.rs  withdraw.rs
src/: split_main.rs
