[package]
name = "splits"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = [
    "eips",
    "network",
    "rpc",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "transports",
    "providers",
    "contract",
] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
